# mahmoney

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
src/mahmoney/: auth.py  config.py  database.py
src/mahmoney/api/: app.py  deps.py
src/mahmoney/api/routes/: dashboard.py  expenses.py  health.py  imports.py
src/mahmoney/models/: __init__.py  enums.py  expense.py
src/mahmoney/parsers/: base.py  chase.py  eurobank.py  revolut.py
src/mahmoney/schemas/: expense.py  ocr.py
src/mahmoney/services/: csv_parser.py  email_poller.py  ocr.py  storage.py
src/mahmoney/ui/: routes.py
src/mahmoney/ui/templates/: base.html  dashboard.html  expenses.html  login.html  scan.html
src/mahmoney/worker/: poller.py
tests/: conftest.py  test_api_expenses.py  test_csv_parsers.py  test_models.py  test_ocr.py
