[project]
name = "mahmoney"
version = "0.1.0"
description = "Personal expense tracking system with OCR, email ingestion, and bank CSV import"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "aioimaplib>=2.0.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mahmoney"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "PTH",   # flake8-use-pathlib
    "ASYNC", # flake8-async
]
ignore = [
    "S101",   # assert used in tests
    "S104",   # binding to all interfaces (needed in docker)
    "B008",   # function call in default arg (FastAPI Depends)
    "RUF001", # ambiguous unicode chars (Greek text is intentional)
    "E501",   # line length (handled by formatter for code, not strings)
]

[tool.ruff.lint.isort]
known-first-party = ["mahmoney"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
